<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="fromHMI" Id="{f5636584-9919-4ade-b615-ee8569400dcc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bIhmReset:BOOL;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>